# pytorch_lightning_quick_start_utils

./: .gitignore  README.MD  example.ipynb  pyproject.toml  setup.py
.github/workflows/: black_format.yml  unittest.yml
cli/: __init__.py  tensorboard.py
misc/: README.md  requirements.txt
pl_utils/: __init__.py  configs.py  dataset.py  modules.py  optmizers.py
pl_utils/lightning/: logger.py
pl_utils/misc/: __init__.py  initialization.py  learning_rate_scheduler.py  model_summary.py  notebook.py
pl_utils/nn/: __init__.py  mlp.py  transformer.py
pl_utils/nn/transformer/: __init__.py  attention.py  embeddings.py  rotary_embedding.py
tests/: test_adamw_muon.py  test_all_params_optimized.py  test_checkpoint.py  test_lightning.py  test_nn.py  test_training.py
tests/misc/: test_learning_rate_scheduler.py  test_model_summary.py
tests/nn_transformer/: test_attention.py  test_embeddings.py  test_rotary_embedding.py
