[tool.black]
line-length = 100
skip-string-normalization = true
[tool.pdm]
distribution = true

[project]
name = "pytorch_lightning_quick_start_utils"
version = "0.3.0"
description = "A utility library for PyTorch Lightning that provides pre-configured training setups to quickly start training."
authors = [
    {name = "HiDolen", email = "hidolen@163.com"},
]
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.9",
    "scikit-learn>=1.5.2",
    "lightning>=2.4.0",
    "ipython>=8.28.0",
    "pdm>=2.20.1",
    "tensorboard>=2.19.0",
]
requires-python = ">=3.12, <3.15"
readme = "README.md"
license = {text = "MIT"}
keywords = ["artificial intelligence", "deep learning", "pytorch", "lightning"]

[project.urls]
Homepage = "https://github.com/hidolen/pytorch_lightning_quick_start_utils"
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pylint]
disable = [
    "C0114",  # missing module docstring
    "C0115",  # missing class docstring
    "C0116",  # missing function docstring
    "C0301",  # line-too-long
    "E1102",  # not-callable
    "W0102",  # dangerous-default-value
    "W0223",  # abstract-method
    "W0611",  # unused-import
    "W0613",  # unused-argument
    "W0622",  # redefined-builtin
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
